Fix CORS: Customizer.withDefaults() + www.levelupgamer.lol